--- a/css/style.css
+++ b/css/style.css
@@ -5,32 +5,39 @@ body {
     overflow-x: hidden;
 }
 
+header {
+    max-width: 1440px;
+    margin: 0 auto;
+    background-color: #FEE5AB;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #logo {
-    margin-left: 150px;
+    margin-left: 50px;
 }
 
 #top-nav {
-   background-color: #FEE5AB;
-    width: 100%;
-    height: 120px;
-    margin-top: -125px;
+    float: right;
+    margin-right: 50px;
+    text-align: right;
+    width: 80%;
 }
 
 #top-nav ul li {
     list-style: none;
     display: inline-block;
-    position: relative;
-    left: 500px;
-    top: 50px;
 }
 
 #top-nav ul li a{
-   margin-left: -4px; 
+    margin-left: -4px; 
     text-decoration: none;
     color: #BA9B5F;
     background-color: #FAEECF;
-    padding: 10px 30px 10px 30px;
-    border-color: ##BA9B5F;
+    padding: 10px 30px;
+    border-color: #BA9B5F;
     border-style: solid;
     border-width: 1px;
 }
@@ -40,17 +47,38 @@ body {
     font-weight: 900;
 }
 
-#sandy-box {
-    background-color: #DEC692;
-    margin-top: 0px;
-    padding-top: 10px;
-    height: 400px;
+#main-container {
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
-#inside-sandy-box {
-    width: 20%;
-    margin-left: 150px;
-    
+#sandy-box {
+    background-color: #DEC692;
+    padding: 50px;
+    height: 340px;
+    border: 1px red solid;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+#sandy-box-text-container {
+    width: 30%;
+    border: 1px red solid;
+    padding: 10px;
+}
+
+#sandy-box-text-container h3 {
+    margin: 0;
+    padding-bottom: 20px;
+}
+
+#sandy-box-text-container p {
+    padding-bottom: 50px;
 }
 
 #tour {
@@ -63,6 +91,7 @@ body {
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    text-decoration: none;
 }
 
 #register {
@@ -73,16 +102,21 @@ body {
     text-align: center;
     font-size: 17px;
     margin-top: -70px;
-    margin-left: 130px;
+    /* margin-left: 130px; */
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    text-decoration: none;
 }
 
+#sandy-box-image-holder {
+    width: 60%;
+    border: 1px red solid;
+}
 
 #image-holder {
-    margin-left: 527px;
-    margin-top: -325px;
+    /* margin-left: 527px; */
+    /* margin-top: -325px; */
 }
 
 
@@ -101,27 +135,27 @@ body {
 #box {
    width: 17%; 
     margin-top: 0px;
-    margin-left: 130px;
+    /* margin-left: 130px; */
 }
 
-#box img {
+.box img {
     border-width: 2px;
     border-style: solid;
     border-color: white;
 }
 
-#box p {
+.box p {
    text-align: center; 
     width: 250px;
     margin-left: 12px;
 }
 
-#box h5 {
+.box h5 {
     background-color: green;
     padding: 10px;
     width: 150px;
     font-size: 17px;
-    margin-left: 55px;
+    /* margin-left: 55px; */
     text-align: center;
     color: white;
     border-width: 1px;
@@ -129,79 +163,7 @@ body {
     border-color: black;
 }
 
-#box2 {
-   width: 17%; 
-    margin-top: -379px;
-    margin-left: 500px;
-}
-
-#box2 img {
-    border-width: 2px;
-    border-style: solid;
-    border-color: white;
-}
-
-#box2 p {
-    text-align: center;
-    width: 250px;
-    margin-left: 12px;
-}
-
-#box2 h5 {
-   background-color: green;
-    padding: 10px;
-    width: 150px;
-    font-size: 17px; 
-    margin-left: 55px;
-    text-align: center;
-    color: white;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-}
-
-#box3 {
-   width: 17%; 
-    margin-top: -380px;
-    margin-left: 870px;
-}
-
-#box3 img {
-    border-width: 2px;
-    border-style: solid;
-    border-color: white;
-}
-
-#box3 p {
-    text-align: center;
-    width: 250px;
-    margin-left: 12px;
-}
-
-#box3 h5 {
-   background-color: green;
-    padding: 10px;
-    width: 150px;
-    font-size: 17px; 
-    margin-left: 55px;
-    text-align: center;
-    color: white;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    
-}
-
-#box h5:hover {
-    background-color: goldenrod;
-}
-
-#box2 h5:hover {
-    background-color: goldenrod;
-}
-
-#box3 h5:hover {
-    
+.box h5:hover {
     background-color: goldenrod;
 }
 
@@ -214,7 +176,7 @@ body {
 
 #contact-details {
     width: 25%;
-    margin-left: 100px;
+    /* margin-left: 100px; */
 }
 
 #contact-details h3 {
@@ -231,8 +193,8 @@ p span {
 
 #social-media {
     width: 25%;
-    margin-left: 500px;
-    margin-top: -235px;
+    /* margin-left: 500px; */
+    /* margin-top: -235px; */
 }
 
 #social-media h3 {
@@ -243,7 +205,7 @@ p span {
 #social-media #place-holder {
     color: lightgrey;
     width: 100%;
-    margin-left: 1px;
+    /* margin-left: 1px; */
 }
 
 .social {
@@ -273,8 +235,8 @@ p span {
 
 #thoughts {
     width: 25%;
-    margin-left: 890px;
-    margin-top: -236px;
+    /* margin-left: 890px; */
+    /* margin-top: -236px; */
 }
 
 #thoughts h3 {
@@ -289,7 +251,7 @@ p span {
 }
 
 #thoughts button {
-    margin-left: 125px
+    /* margin-left: 125px */
 }
 
 #thoughts #footer {
