--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ header {
     background-color: #DEC692;
     padding: 50px;
     height: 340px;
-    border: 1px red solid;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -68,7 +67,6 @@ header {
 
 #sandy-box-text-container {
     width: 30%;
-    border: 1px red solid;
     padding: 10px;
 }
 
@@ -81,8 +79,8 @@ header {
     padding-bottom: 50px;
 }
 
-#tour {
-   background-color: green;
+.header_buttons {
+    background-color: green;
     padding: 10px;
     color: white;
     width: 100px;
@@ -94,31 +92,13 @@ header {
     text-decoration: none;
 }
 
-#register {
-   background-color: green;
-    padding: 10px;
-    color: white;
-    width: 100px;
-    text-align: center;
-    font-size: 17px;
-    margin-top: -70px;
-    /* margin-left: 130px; */
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    text-decoration: none;
+.header_buttons:hover {
+    background-color: goldenrod;
 }
 
 #sandy-box-image-holder {
     width: 60%;
-    border: 1px red solid;
 }
-
-#image-holder {
-    /* margin-left: 527px; */
-    /* margin-top: -325px; */
-}
-
 
 #image-holder img {
     border-width: 5px;
@@ -129,13 +109,16 @@ header {
 #grey-box {
     background-color: #D8D7D7;
     height: 370px;
-    padding-top: 30px;
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
 
-#box {
-   width: 17%; 
-    margin-top: 0px;
-    /* margin-left: 130px; */
+.box {
+   width: 33%; 
+   padding: 10px;
+   text-align: center;
 }
 
 .box img {
@@ -145,45 +128,48 @@ header {
 }
 
 .box p {
-   text-align: center; 
-    width: 250px;
-    margin-left: 12px;
+    text-align: center; 
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
-.box h5 {
+.box_buttons {
     background-color: green;
     padding: 10px;
     width: 150px;
+    margin: 0 auto;
     font-size: 17px;
-    /* margin-left: 55px; */
-    text-align: center;
+    display: block;
     color: white;
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    text-decoration: none;
 }
 
-.box h5:hover {
+.box_buttons:hover {
     background-color: goldenrod;
 }
 
-#dark-grey-box {
+.footer {
     background-color: #6D6D6D;
     width: 100%;
     height: 300px;
-    padding-top: 1px;
+    /* padding-top: 1px; */
+    display: flex;
+    justify-content: space-around;
 }
 
-#contact-details {
+.footer_box {
     width: 25%;
-    /* margin-left: 100px; */
 }
 
-#contact-details h3 {
+.footer_box h3 {
     color: white;
 }
 
-#contact-details #place-holder {
+.footer_box #place-holder {
     color: lightgrey;
 }
 
@@ -191,52 +177,30 @@ p span {
     color: white;
 }
 
-#social-media {
-    width: 25%;
-    /* margin-left: 500px; */
-    /* margin-top: -235px; */
-}
-
-#social-media h3 {
-    color: white;
-    
-}
-
-#social-media #place-holder {
-    color: lightgrey;
-    width: 100%;
-    /* margin-left: 1px; */
-}
-
-.social {
+.social_media_links {
     list-style-type: none;
-    text-align: center;
-    position: relative;
-    left: 40px;
-    top: 33px;
-    display: inline-block;    
-    width: 50%;
+    display: block;    
+    width: 80%;
+    padding: 0;
 }
 
-.social li {
+.social_media_links li {
     display: inline;
 }
 
-.social i {
+.social_media_links i {
     font-size: 200%;
     margin: 5px;
     padding: 5% 5% 5% 4%;
     color: #D6CFCA;
 }
 
-.social i:hover {
+.social_media_links i:hover {
     color: #EEECEA;
 }
 
 #thoughts {
     width: 25%;
-    /* margin-left: 890px; */
-    /* margin-top: -236px; */
 }
 
 #thoughts h3 {
@@ -245,13 +209,22 @@ p span {
 }
 
 #thoughts #place-holder {
-   color: lightgrey;
+    color: lightgrey;
     width: 100%;
     margin-left: 0px; 
 }
 
-#thoughts button {
-    /* margin-left: 125px */
+#thoughts input {
+    height: 32px;
+}
+
+#thoughts input::placeholder {
+    padding: 5px;
+}
+
+#thoughts a {
+    padding: 10px 20px;
+    display: initial;
 }
 
 #thoughts #footer {
