--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
-    overflow-x: hidden;
+    overflow: hidden !important;
 }
 
 header {
@@ -31,8 +31,7 @@ header {
     display: inline-block;
 }
 
-#top-nav ul li a{
-    margin-left: -4px; 
+#top-nav ul li a {
     text-decoration: none;
     color: #BA9B5F;
     background-color: #FAEECF;
@@ -43,8 +42,9 @@ header {
 }
 
 #top-nav ul li a:hover {
-    color: black;
-    font-weight: 900;
+    color: #ffffff;
+    border-color: #000000;
+    background-color: green;
 }
 
 #main-container {
@@ -116,9 +116,9 @@ header {
 }
 
 .box {
-   width: 33%; 
-   padding: 10px;
-   text-align: center;
+    width: 33%; 
+    padding: 10px;
+    text-align: center;
 }
 
 .box img {
@@ -156,7 +156,6 @@ header {
     background-color: #6D6D6D;
     width: 100%;
     height: 300px;
-    /* padding-top: 1px; */
     display: flex;
     justify-content: space-around;
 }
@@ -234,3 +233,43 @@ p span {
 }
 
 
+@media screen and (max-width: 1030px) {
+
+    header {
+        display: block;
+        height: 170px;
+    }
+
+    .logo_container {
+        width: 281px;
+        margin: 0 auto;
+        display: block;
+    }
+
+    #logo {
+        margin: 0;
+    }
+
+    #top-nav {
+        width: 100%;
+        float: none;
+        text-align: center;
+    }
+
+    #sandy-box {
+        display: block;
+        height: 640px;
+    }
+
+    #sandy-box-text-container {
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+        width: 65%;
+    }
+
+    #sandy-box-image-holder {
+        width: 100%;
+        text-align: center;
+    }
+}
