--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
-    overflow: hidden !important;
+    overflow-x: hidden !important;
 }
 
 header {
@@ -161,7 +161,7 @@ header {
 }
 
 .footer_box {
-    width: 25%;
+    width: 30%;
 }
 
 .footer_box h3 {
@@ -198,17 +198,8 @@ p span {
     color: #EEECEA;
 }
 
-#thoughts {
-    width: 25%;
-}
-
-#thoughts h3 {
-    color: white;
-    
-}
 
 #thoughts #place-holder {
-    color: lightgrey;
     width: 100%;
     margin-left: 0px; 
 }
@@ -226,14 +217,13 @@ p span {
     display: initial;
 }
 
-#thoughts #footer {
+#thoughts #footer_copy {
     color: lightgrey;
     font-size: 13px;
     margin-top: 45px;
 }
 
-
-@media screen and (max-width: 1030px) {
+@media screen and (max-width: 1050px) {
 
     header {
         display: block;
@@ -272,4 +262,24 @@ p span {
         width: 100%;
         text-align: center;
     }
+
+    .box {
+        padding: 0;
+        width: 31%;
+        overflow: hidden;
+    }
+
+    .box img {
+        width: 98%;
+    }
+}
+
+@media screen and (max-width: 865px) {
+    .footer_box {
+        width: 32%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    
 }
