--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,21 @@ header {
     background-color: green;
 }
 
+.mobile_menu_icon, .clear_header {
+    display: none;
+}
+
+.mobile_menu_drawer {
+    width: 0%;
+    overflow: hidden;
+    height: 100vh;
+    transition: width 1s;
+}
+
+.mobile_menu_drawer ul {
+    display: none;
+}
+
 #main-container {
     max-width: 1440px;
     margin: 0 auto;
@@ -281,5 +296,56 @@ p span {
 }
 
 @media screen and (max-width: 820px) {
-    
+    .footer {
+        height: 650px;
+        flex-wrap: wrap;
+        padding: 20px 0;
+    }
+
+    .footer_box {
+        width: 80%;
+        margin: 0 auto;
+        border-bottom: 1px #ffffff solid;
+    }
+
+    .footer_box:last-of-type {
+        border-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #top-nav, .logo_container {
+        display: none;
+    }
+
+    header {
+        height: 70px;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        position: fixed;
+    }
+
+    .clear_header {
+        display: block;
+        height: 70px;
+    }
+
+    .mobile_menu_icon {
+        display: block;
+        margin-right: 10px;
+        cursor: pointer;
+    }
+
+    .mobile_menu_icon i {
+        font-size: 2em;
+    }
+
+    .showMenu {
+        width: 100%;
+    }
+
+    .showMenu ul {
+        display: block;
+    }
 }
