--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,12 @@ header {
     font-size: 18px;
 }
 
+#sandy-box-image-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .header_buttons {
     background-color: green;
     padding: 10px;
